# corebroker

./: .travis.yml  CMakeLists.txt  README.md  makefile
.circleci/: config.yml
canrouter/: canmessage.json  makefile
canrouter/nbproject/: configurations.xml  project.xml
canrouter/nbproject/private/: configurations.xml  private.xml
canrouter/src/: main.cpp
common/: CMakeLists.txt  makefile
common/file/: CMakeLists.txt  makefile
common/file/api/: tfile.h
common/file/inc/: memfile.h  tfile.h
common/file/src/: memfile.cpp  tfile.cpp
common/file/test/: CMakeLists.txt
common/file/test/src/: main.cpp
common/jsoncpp/json/: json.h
common/msg/: msgdef.h
common/tcan/: CMakeLists.txt  makefile
common/tcan/inc/: tcan.h
common/tcan/src/: tcan.cpp
common/tconfigmng/: CMakeLists.txt  makefile
common/tconfigmng/inc/: TConfigMng.h
common/tconfigmng/src/: TConfigMng.cpp  jsoncpp.cpp
common/tmessage/: CMakeLists.txt  makefile
common/tmessage/inc/: TMessage.h
common/tmessage/src/: TMessage.cpp
common/tnodenet/: CMakeLists.txt  makefile
common/tnodenet/inc/: INode.h  IThread.h  TClientNode.h  TRemoteNode.h  TSocketClient.h  TSocketServer.h
common/tnodenet/src/: IThread.cpp  TClientNode.cpp  TRemoteNode.cpp  TSocketClient.cpp  TSocketServer.cpp
corebroker/: Makefile  main.cpp
corebroker/inc/: IThread.h  TConfigMng.h  TMessage.h  TNode.h  TNodeClient.h  TSocketClient.h  TSocketServer.h
corebroker/src/: IThread.cpp  TConfigMng.cpp  TMessage.cpp  TNode.cpp  TNodeClient.cpp  TSocketClient.cpp  TSocketServer.cpp
corebroker/test/: config.json
corebroker_oldcpp/: makefile  test.json
corebroker_oldcpp/inc/: INode.h  IThread.h  TMessage.h  TRemoteNode.h  TSocketServer.h
corebroker_oldcpp/nbproject/: configurations.xml  project.xml
corebroker_oldcpp/nbproject/private/: Default.properties  configurations.xml
corebroker_oldcpp/src/: TClientNode.cpp  TConfigMng.cpp  TMessage.cpp  main.cpp
exampleclient/: CMakeLists.txt  makefile  test2.json
exampleclient/inc/: TConfigMng.h
exampleclient/src/: TConfigMng.cpp  main.cpp
simpleserver/: CMakeLists.txt  makefile
simpleserver/inc/: TConfigMng.h
simpleserver/src/: main.cpp
